
2006-10-04 Christian Bayle <bayle@debian.org>
 	* remove use of deprecated user_ismember function in layout.class
	* Allow opening of /etc/gforge/local.inc readonly in configman.php,
	remove some warning
	* Correct outertab hook and remove deprecated user_ismember function
	in Layout.class

2006-09-19 Reinhard Spisser <reinhard@spisser.it>
 	* replacing dojo tabs with tabber

2006-07-21 Reinhard Spisser <reinhard@spisser.it>
	* I18n of activity tab
	* Fixed translation tool which did not work correctly
	
2006-06-01 Reinhard Spisser <reinhard@spisser.it>
	* committing first xhtml compliant theme (gforge-simple-theme)

2006-06-01 Reinhard Spisser <reinhard@spisser.it>
	* fix for bug [#2491] CSS Bug

2006-05-19 Reinhard Spisser <reinhard@spisser.it>
	* final commits for css-ification task

2006-05-15 Daniel Perez <daniel@gforgegroup.com>
	* Fixed a bug in the forum admin new moderated message notice, the link was wrong

2006-05-05 Reinhard Spisser <reinhard@spisser.it>
	* css-ification of www/pm, www/search, www/snippet, www/softwaremap
	  www/stats, www/survey, www/tracker

2006-05-04 Reinhard Spisser <reinhard@spisser.it>
	* css-ification of common/, www/account, www/activity, www/developer
	  www/forum, www/frs, www/my and www/include/languages

2006-04-30 Reinhard Spisser <reinhard@spisser.it>
	* added new css/gforge.css and reference this new css in Layout.class
	* added new osx/css/theme.css and and gforge/css/theme.css and reference this new css in Layout.class

2006-04-28 Daniel Perez <daniel@gforgegroup.com>
	* Applied patch : Fixing daily_task_email cronjob
		http://gforge.org/tracker/?func=detail&aid=2307&group_id=1&atid=106
	* Applied patch : Missing links back from various admin sub-tabs
		http://gforge.org/tracker/?func=detail&aid=2266&group_id=1&atid=106

2006-04-26 Tim Perdue <tim@gforgegroup.com>

	* fixed a bug in artifactfactory where arrays were being saved and creating
	an unsolvable problem and broken sql query.
