@@ -3,8 +3,8 @@
 
 //
 //	This script will read in a list existing mailing lists, then add the new lists
-//	and, finally, create the lists in a /tmp/mailman-aliases file
-//	The /tmp/mailman-aliases file will then be read by the mailaliases.php file
+//	and, finally, create the lists in a /var/lib/gforge/dumps/mailman-aliases file
+//	The /var/lib/gforge/dumps/mailman-aliases file will then be read by the mailaliases.php file
 //
 
 require ('squal_pre.php');
@@ -54,7 +54,7 @@ $err .= db_error();
 $rows=db_numrows($res);
 $err .= "$rows rows returned from query\n";
 
-$h1 = fopen("/tmp/mailman-aliases","w");
+$h1 = fopen("/var/lib/gforge/dumps/mailman-aliases","w");
 
 $mailingListIds = array();
 
