@@ -115,11 +115,13 @@ require_once('www/soap/scm/scm.php');
 
 $wsdl_data = $server->wsdl->serialize();
 
+/*
 if ($wsdl == "save") {
    $fp = fopen ("/tmp/SoapAPI1.wsdl", 'w');
    fputs ($fp, $wsdl_data);
    fclose ($fp);
 }
+*/
 
 if ($wsdl) {
 	echo $wsdl_data;
