@@ -1,3 +1,15 @@
+2007-11-04  Roland Mas  <lolando@debian.org>
+
+	* Several fixes to remove vulnerabilities against symlink attacks
+	in /tmp (CVE-2007-3921).
+	* common/include/cron_utils.php: Use semaphore rather than
+	insecure lock files.
+	* cronjobs/massmail.php: Adapt to that semaphore change.
+	* www/soap/index.php: Commented out debugging code that could be
+	used to overwrite files.
+	* cronjobs/mail/mailaliases.php and mailing_lists_create.php: Use
+	/var/lib/gforge/dumps/mailman-aliases rather than
+	/tmp/mailman-aliases. 
 
 2006-10-04 Christian Bayle <bayle@debian.org>
  	* remove use of deprecated user_ismember function in layout.class
